--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+aioredis==2.0.1
 anyio==3.6.1
 asgiref==3.5.2
+async-timeout==4.0.2
+asyncpg==0.26.0
 certifi==2022.6.15
 charset-normalizer==2.1.1
 click==8.1.3
+databases==0.6.1
+Deprecated==1.2.13
 dnspython==2.2.1
 email-validator==1.2.1
-fastapi==0.80.0
+fastapi==0.81.0
 flake8==5.0.4
+greenlet==1.1.3
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
@@ -15,15 +21,19 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
 orjson==3.7.12
+packaging==21.3
 pycodestyle==2.9.1
 pydantic==1.9.2
 pyflakes==2.5.0
+pyparsing==3.0.9
 python-dotenv==0.20.0
 python-multipart==0.0.5
 PyYAML==6.0
+redis==4.3.4
 requests==2.28.1
 six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.40
 starlette==0.19.1
 typing_extensions==4.3.0
 ujson==5.4.0
@@ -32,3 +42,4 @@ uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8.2
 websockets==10.3
+wrapt==1.14.1
