--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioredis==2.0.1
+alembic==1.8.1
 anyio==3.6.1
 asgiref==3.5.2
 async-timeout==4.0.2
@@ -18,10 +19,12 @@ httptools==0.4.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.1
 MarkupSafe==2.1.1
 mccabe==0.7.0
 orjson==3.7.12
 packaging==21.3
+psycopg2-binary==2.9.3
 pycodestyle==2.9.1
 pydantic==1.9.2
 pyflakes==2.5.0
