--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
+aiohttp==3.8.1
 aioredis==2.0.1
+aiosignal==1.2.0
 alembic==1.8.1
 anyio==3.6.1
 asgiref==3.5.2
 async-timeout==4.0.2
 asyncpg==0.26.0
+attrs==22.1.0
 certifi==2022.6.15
 charset-normalizer==2.1.1
 click==8.1.3
 databases==0.6.1
 Deprecated==1.2.13
 dnspython==2.2.1
+ecdsa==0.18.0
 email-validator==1.2.1
 fastapi==0.81.0
 flake8==5.0.4
+frozenlist==1.3.1
 greenlet==1.1.3
 h11==0.13.0
 httptools==0.4.0
@@ -22,18 +27,22 @@ Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
 mccabe==0.7.0
+multidict==6.0.2
 orjson==3.7.12
 packaging==21.3
 psycopg2-binary==2.9.3
+pyasn1==0.4.8
 pycodestyle==2.9.1
 pydantic==1.9.2
 pyflakes==2.5.0
 pyparsing==3.0.9
 python-dotenv==0.20.0
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 redis==4.3.4
 requests==2.28.1
+rsa==4.9
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.40
@@ -46,3 +55,4 @@ uvloop==0.16.0
 watchgod==0.8.2
 websockets==10.3
 wrapt==1.14.1
+yarl==1.8.1
